# sage-deprecated

./: .gitignore  Cargo.toml  Makefile  README.md  config.scm  main.scm  run.sh  sage.scm
.github/workflows/: linting.yml  testing.yml
flashkick/: Cargo.toml  build.rs
flashkick/src/: err.rs  ffi.rs  fn_runner.rs  foreign_object.rs  lib.rs  module.rs  scm.rs  scm_obj.rs
rust/flashkick/: Cargo.toml  README.md
rust/flashkick/src/: err.rs  fn_runner.rs  foreign_object.rs  lib.rs  module.rs  scm.rs
rust/sage/: Cargo.toml
rust/sage/src/: event.rs  lib.rs  rope.rs  scm_const.rs  theme.rs  treesitter.rs
rust/sage/src/tui/: backend.rs  mod.rs  widgets.rs  window.rs
sage/: modal.scm  state.scm
sage/builtin/: editor.scm  modal.scm  tutorial.scm
sage/core/: buffer.scm  event.scm  internal.scm  log.scm  rect.scm  rope.scm  tree-sitter.scm  tui.scm  window.scm
sage/tests/: rope-tests.scm  tests.scm  treesitter-tests.scm
scheme/: main.scm
scheme/tests/: buffer-test.scm  event-loop-test.scm  event-test.scm  tui-test.scm  willy-buffer.scm  willy-tui.scm  window-test.scm
scheme/willy/: buffer.scm  event-loop.scm  file-picker.scm  internal.scm  main.scm  modal.scm  open-file.scm  state.scm  tui.scm
src/: app.rs  buffer.rs  fk.rs  lib.rs  main.rs  scm_obj_cache.rs  terminal_backend.rs
willy/: Cargo.toml
willy-buffer/: Cargo.toml
willy-buffer/src/: lib.rs  scm.rs
willy-tui/: Cargo.toml
willy-tui/src/: lib.rs  tui.rs
willy/src/: app.rs  buffer.rs  buffer_content.rs  frame_limiter.rs  lib.rs  main.rs  scm_module.rs  scm_object_cache.rs  tui.rs  (+1 more)
(+15 files in other folders)
