[package]
name = "flashkick"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/wmedrano/willy"
description = "Wrapper for GNU Guile Scheme."
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.bindgen]
version = "0.66"

[build-dependencies.pkg-config]
version = "0.3"

[dependencies]
anyhow = "1"
