[package]
name = "flashkick"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/wmedrano/sage/rust/flashkick"
description = "Wrapper for GNU Guile Scheme."
license = "LGPL-3.0-only"

[dependencies]
anyhow = "1"

[build-dependencies.bindgen]
version = "0.66"

[build-dependencies.pkg-config]
version = "0.3"
