[package]
name = "sage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crop = "0.4"
crossterm = "0.27"
flashkick = { path = "../flashkick" }
ratatui = "0.25"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"